force-app/main/default/objects/Account_Automation_Config__mdt/Account_Automation_Config__mdt.object-meta.xml
<CustomObject>
    <label>Account Automation Config</label>
    <pluralLabel>Account Automation Configs</pluralLabel>
</CustomObject>