force-app/main/default/objects/Account_Automation_Config__mdt/fields/Fiscal_Year_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_Start_Month__c</fullName>
    <label>Fiscal Year Start Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>