force-app/main/default/objects/Account_Automation_Config__mdt/fields/Inactivity_Days__c.field-meta.xml
<CustomField>
    <fullName>Inactivity_Days__c</fullName>
    <label>Inactivity Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>