force-app/main/default/objects/Account_Automation_Config__mdt/fields/Inactivity_Monitoring_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Inactivity_Monitoring_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactivity Monitoring Enabled</label>
    <type>Checkbox</type>
</CustomField>