force-app/main/default/objects/Account_Automation_Config__mdt/fields/Inactivity_Task_Priority__c.field-meta.xml
<CustomField>
    <fullName>Inactivity_Task_Priority__c</fullName>
    <label>Inactivity Task Priority</label>
    <length>80</length>
    <type>Text</type>
</CustomField>