force-app/main/default/objects/Account_Automation_Config__mdt/fields/Quarterly_Review_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Review_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quarterly  Review Enabled</label>
    <type>Checkbox</type>
</CustomField>