force-app/main/default/objects/Account_Automation_Config__mdt/fields/Review_Task_Priority__c.field-meta.xml
<CustomField>
    <fullName>Review_Task_Priority__c</fullName>
    <label>Review Task Priority</label>
    <length>80</length>
    <type>Text</type>
</CustomField>